<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.coffeapp.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/rev_main1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <EditText
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"
                android:inputType="textCapWords"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/topinngs"
                android:layout_marginTop="12dp"
                android:textAllCaps="true"
                android:paddingBottom="12dp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/whipped_cream"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Whipped_cream"
                    android:paddingLeft="24dp"
                    android:paddingRight="12dp"
                    android:textSize="16dp"/>
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chocolate"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Chocolate"
                    android:paddingLeft="24dp"
                    android:textSize="16dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/QUANTITY"
                android:padding="12sp"
                android:id="@+id/first"
                android:textColor="@android:color/black"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/rev_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <Button
                android:id="@+id/minus"
                android:layout_height="48dp"
                android:layout_width="48dp"
                android:textColor="@android:color/black"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:padding="16sp"
                android:textColor="@android:color/black"
                android:id="@+id/quantity_text_view" />
            <Button
                android:id="@+id/plus"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+"
                android:textColor="@android:color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ORDER_SUMMARY"
                android:gravity="center"
                android:padding="12sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/order_summary_text_view"
                android:padding="12sp"
                android:textSize="20dp"
                android:gravity="center"
                android:text="" />
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                <Button
                    android:id="@+id/button_id"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/black"
                    android:onClick="submitOrder"
                    android:text="@string/ORDER" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/Send_to_email"
                    android:id="@+id/button_Sent_To_Mail"
                    android:onClick="sendMail"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
